# TECTRIS-FORK

./: CMakeLists.txt  GUIA_EXECUCAO.md  RELATORIO.md
docs/: RELATÓRIO EVOLUTIVO DE GERENCIAMENTO DE PROJETOS.md
include/: common.h  game.h  history.h  stats.h
src/: main.c
src/game/: game.c  questions.c
src/render/: render.c
src/utils/: history.c  stats.c  sugestao_report.txt
